# RMA-Net

./: README.md  build_cuda.py  inference.py  inference_samples.sh
data/sample_data/code_for_converting_seed_to_dataset/: convert_seed_to_dataset.py  sample_points_for_one_mesh.py
data/sample_data/code_for_converting_seed_to_dataset/mlx/: pds.mlx  pds.post  pds.pre  pds_beifen.mlx
data/sample_data/code_for_converting_seed_to_dataset/vertex2acap/: CMakeLists.txt  build_acap.py  main.cpp  util_3drotation_log_exp.h
data/sample_data/packed_data/: README.md
data/sample_data/seed/: README.md
model/: loss.py  network.py  train_sample.py  train_script.py  train_view.py
model/LieAlgebra/: __init__.py
model/exfunc/expackages/point_masker/: point_masker.cpp  point_masker_cuda.cu  setup.py
model/exfunc/expackages/point_render/: cuda_config.h  point_render.cpp  point_render_cuda.cu  point_render_func.py  setup.py
model/exfunc/functions/: point_masker_func.py
model/ptlk/: __init__.py  pointlk.py  pointnet.py  pointnr.py  pointseg.py
utils/: config.py  drawer.py
